ficheros-yaml/postgres-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-final
spec:
  serviceName: db-final
  replicas: 1
  selector:
    matchLabels:
      app: db-final
  template:
    metadata:
      labels:
        app: db-final
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: topolvm-provisioner
        resources:
          requests:
            storage: 1Gi
