ficheros-yaml/python-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
      annotations:
        instrumentation.opentelemetry.io/inject-python: otel-system/elastic-instrumentation
    spec:
      containers:
        - name: python-app-container
          image: ghcr.io/chuno9/python-app:latest
          ports:
            - containerPort: 8000
