ficheros-yaml/python-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
