ficheros-yaml/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-final
spec:
  selector:
    app: db-final
  ports:
    - port: 5432
      targetPort: 5432
