ficheros-yaml/httproute-python.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: python-app-route
  namespace: python-app
spec:
  hostnames:
    - python.lab
  parentRefs:
    - name: lab-gateway
      namespace: istio-system
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: python-app-service
          port: 80
